--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,11 @@
   src: url('./app/assets/fonts/Satoshi_Complete/Fonts/TTF/Satoshi-Variable.ttf');
 }
 
+@font-face {
+  font-family: "Clash";
+  src: url('./app/assets/fonts/NibPro-Regular.ttf');
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -18,5 +23,17 @@ body{
   position: relative;
   width: 100%;
   height: 100vh;
+  background: #fafafa;
+  max-width: 1500px;
+  border-left: 1px solid #0a0a0a;
+  border-right: 1px solid #0a0a0a;
 }
 
+.hero_header{
+  font-family: "Clash", sans-serif;
+}
+
+section{
+  width: 100%;
+  padding: 32px 30px;
+}
