--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,13 +28,13 @@ body{
   position: relative;
   width: 100%;
   height: 100vh;
-  background: #fafafa;
+  background: #ffffff;
   max-width: 1500px;
   border-left: 1px solid #0a0a0a;
   border-right: 1px solid #0a0a0a;
 }
 
-.hero_header{
+.header{
   font-family: "Clash", sans-serif;
 }
 
