--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,13 @@ section{
   width: 100%;
   padding: 32px 30px;
 }
+
+
+table tr th{
+  text-align: left;
+  font-weight: 100;
+}
+
+table tbody tr td{
+  font-weight: 500;
+}
